@@ -1,3 +1,8 @@
+2006-08-25  fabian
+
+    * Fixed the overflow menu bug where the 1st item isn't updated correctly.
+    * Restored (partly) context menu functionality for the new tabview.
+    
 2006-08-24  fabian
 
     * Fixed a few bugs related to the upgrade to new PSMTabBarControl.
